fix: adjust spacing in link item by adding a width value

--- a/src/components/atoms/LinkItem/styles.module.scss
+++ b/src/components/atoms/LinkItem/styles.module.scss
@@ -5,9 +5,14 @@
   cursor: pointer;
   color: $black;
 
+  @include screen-size('desktop') {
+    width: 20rem;
+  }
+
   &:hover,
   &:focus,
-  &:visited {
+  &:visited,
+  &:active {
     font-weight: 600;
     color: $purple;
 
